fix css su scrollbar (thin)

--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ body:after{
   width: 100%;
   background-color: white;
   overflow-y: auto;
+  scrollbar-width: thin;
 }
 
 .user{
